--- a/styles.css
+++ b/styles.css
@@ -4,7 +4,7 @@ body {
     padding: 20px;
     background-color: #f4f4f4; 
     color: white; 
-    background-image: url("Image_2.jpg"); 
+    background-image: url("image_3.jpg"); 
     background-size: cover; 
     background-repeat: no-repeat; 
     background-position: center; 
