--- a/styles.css
+++ b/styles.css
@@ -3,8 +3,8 @@ body {
     margin: 0;
     padding: 20px;
     background-color: #f4f4f4; 
-    color: white; 
-    background-image: url("image_3.jpg"); 
+    color: blue; 
+    background-image: url("image_2.jpg"); 
     background-size: cover; 
     background-repeat: no-repeat; 
     background-position: center; 
@@ -18,7 +18,8 @@ header {
 
 h1 {
     font-size: 2.5em; 
-    margin-bottom: 15px; 
+    margin-bottom: 15px;
+    color: #2c3e50;
 }
 
 section {
@@ -28,6 +29,10 @@ section {
 h2 {
     font-size: 2em; 
     color: #2c3e50; 
+}
+
+p {
+    color: #007bff;
 }
 
 ul {
