--- a/styles.css
+++ b/styles.css
@@ -12,14 +12,14 @@ body {
 
 header {
     text-align: center;
-    background-color: #2980b9; 
+    background-color: #f4f4f4; 
     padding: 30px 0; 
 }
 
 h1 {
     font-size: 2.5em; 
     margin-bottom: 15px;
-    color: #2c3e50;
+    color: #f4f4f4;
 }
 
 section {
@@ -28,11 +28,11 @@ section {
 
 h2 {
     font-size: 2em; 
-    color: #2c3e50; 
+    color: #f4f4f4; 
 }
 
 p {
-    color: #007bff;
+    color: #f4f4f4;
 }
 
 ul {
@@ -44,7 +44,7 @@ ul {
 }
 
 button {
-    background-color: #3498db; 
+    background-color: #f4f4f4; 
     color: white;
     border: none;
     padding: 15px 30px;
@@ -56,5 +56,5 @@ button {
 footer {
     text-align: center;
     margin-top: 50px;
-    color: #777;
+    color: #f4f4f4;
 }
