--- a/styles.css
+++ b/styles.css
@@ -3,7 +3,7 @@ body {
     margin: 0;
     padding: 20px;
     background-color: #f4f4f4; 
-    color: blue; 
+    color: black; 
     background-image: url("image_4.jpg"); 
     background-size: cover; 
     background-repeat: no-repeat; 
