--- a/styles.css
+++ b/styles.css
@@ -19,7 +19,7 @@ header {
 h1 {
     font-size: 2.5em; 
     margin-bottom: 15px;
-    color: #f4f4f4;
+    color: #2c3e50;
 }
 
 section {
@@ -28,7 +28,7 @@ section {
 
 h2 {
     font-size: 2em; 
-    color: #f4f4f4; 
+    color: #2c3e50; 
 }
 
 p {
