--- a/styles.css
+++ b/styles.css
@@ -2,23 +2,19 @@ body {
     font-family: Arial, sans-serif;
     margin: 0;
     padding: 20px;
-    background-color: #f4f4f4; 
     color: black; 
-    background-size: cover; 
-    background-repeat: no-repeat; 
-    background-position: center; 
 }
 
 header {
     text-align: center;
-    background-color: #f4f4f4; 
+    background-color: #2980b9; 
+    color: white;
     padding: 30px 0; 
 }
 
 h1 {
     font-size: 2.5em; 
-    margin-bottom: 15px;
-    color: #2c3e50;
+    margin-bottom: 15px; 
 }
 
 section {
@@ -30,30 +26,13 @@ h2 {
     color: #2c3e50; 
 }
 
-p {
-    color: #f4f4f4;
-}
-
-ul {
-    list-style-type: disc; 
-}
-
-.call-to-action {
-    text-align: center;
-}
-
-button {
-    background-color: #f4f4f4; 
+.button {
+    background-color: #3498db; 
     color: white;
     border: none;
     padding: 15px 30px;
     border-radius: 5px;
     font-size: 1.2em; 
     cursor: pointer;
-}
-
-footer {
-    text-align: center;
-    margin-top: 50px;
-    color: #f4f4f4;
+    text-decoration: none; 
 }
