--- a/styles.css
+++ b/styles.css
@@ -46,25 +46,25 @@ h2 {
     text-align: center; 
 }
 
-.interactive-image {
-    width: 350px; /* Adjust the width as needed */
-    transition: opacity 0.3s ease; 
+.image-container { 
+    position: relative; 
 }
 
-.image-container:hover .interactive-image {
-    opacity: 0; 
+.interactive-image {
+    width: 350px;  /* Adjust as needed */
 }
 
 .hover-text {
     display: none;     
     position: absolute; 
-    top: 50%;   
+    bottom: 10px;   
     left: 50%;   
-    transform: translate(-50%, -50%);  
-    background-color: rgba(0,0,0,0.8); 
+    transform: translateX(-50%);  
+    background-color: rgba(0,0,0,0.7); 
     color: white;
     padding: 8px;
     border-radius: 5px;
+    width: 200px; /* Adjust as needed */
 }
 
 .image-container:hover .hover-text {
