--- a/styles.css
+++ b/styles.css
@@ -54,19 +54,43 @@ h2 {
     width: 350px;  /* Adjust as needed */
 }
 
-.hover-text {
-    display: none;     
-    position: absolute; 
-    bottom: 10px;   
-    left: 50%;   
-    transform: translateX(-50%);  
-    background-color: rgba(0,0,0,0.7); 
-    color: white;
-    padding: 8px;
-    border-radius: 5px;
-    width: 200px; /* Adjust as needed */
+
+
+.tiles {
+  display: flex;
+  justify-content: space-around; 
+  margin-bottom: 20px; 
 }
 
-.image-container:hover .hover-text {
-    display: block;    
+.tile {
+  position: relative; 
+  width: 250px; 
+  margin: 10px; 
+}
+
+.tile img {
+  width: 100%; 
+  height: auto; 
+  border-radius: 8px;
+  transition: opacity 0.3s;
+}
+
+.tile figcaption {
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  width: 100%;
+  background-color: rgba(0, 0, 0, 0.8); 
+  color: white;
+  padding: 10px;
+  opacity: 0; 
+  transition: opacity 0.3s; 
+}
+
+.tile:hover figcaption {
+  opacity: 1; 
+}
+
+.tile:hover img { 
+  opacity: 0; 
 }
